--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,8 +42,8 @@ const year = date.getFullYear();
   @import "./../styles/GlobalStyling";
 
   footer {
-
-
+    position: fixed;
+    height: 60px;
     gap: $spacing-s;
     font-size: .85rem;
     bottom: 0;
