--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -3,10 +3,10 @@
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1rem;
+  font-weight: 500;
+  font-size: 1.5rem;
   letter-spacing: .6px;
-  line-height: 1.6;
-
+  padding-bottom: 1rem;
 
   @include min-width('s') {
     font-size: 1.15rem;
@@ -17,17 +17,18 @@ body {
   }
 
   @include min-width('xl') {
-    font-size: 1.25rem;
+    font-size: 1.7rem;
   }
 
   @include min-width('xxl') {
-    font-size: 1.30rem;
+    font-size: 1.75rem;
   }
 }
 
 h1 {
   font-family: 'Montserrat Variable', sans-serif;
   font-weight: 200;
+  padding-bottom: 1rem;
 
   @include min-width('s') {
     font-size: 2.75rem!important;
@@ -38,15 +39,15 @@ h1 {
   }
 
   @include min-width('l') {
-    font-size: 3.25rem!important;
+    font-size: 3rem!important;
   }
 
   @include min-width('xl') {
-    font-size: 3.5rem!important;
+    font-size: 3rem!important;
   }
 
   @include min-width('xxl') {
-    font-size: 5rem!important;
+    font-size: 3rem!important;
   }
 }
 
@@ -129,35 +130,3 @@ h5 {
   font-family: 'Source Code Pro Variable', monospace;
   font-weight: normal;
 }
-
-p {
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-a {
-  color: $color-black;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-em {
-  font-style: italic;
-}
-
-strong {
-  font-weight: bold;
-
-  em {
-    font-style: bold;
-    font-style: italic;
-  }
-}
-
-code {
-  font-family: 'Fira Code Variable', monospace;
-  color: $color-accent-3;
-}
-
