--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -75,7 +75,7 @@ blockquote {
 ul {
   list-style-type: disc;
   padding-left: 0;
-  margin-top: 0;
+  margin-top: 1rem;
   list-style-position: inside;
 
   li {
@@ -93,8 +93,14 @@ ul {
 
 ol {
   list-style-type: disc;
+  margin-top: 1rem;
   padding-left: 1.25rem;
-  margin-top: 0;
+
+  li {
+    &::marker {
+      color: $color-primary;
+    }
+  }
 }
 
 code {
@@ -106,4 +112,25 @@ pre {
   padding: 1rem;
   background-color: $color-gray-10;
   overflow-x: auto;
+}
+
+a {
+  color: $color-black;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+em {
+  font-style: italic;
+}
+
+strong {
+  font-weight: bold;
+
+  em {
+    font-style: italic;
+  }
 }
