--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -27,7 +27,7 @@ function renderStars(rating: number) {
     <div class="carousel">
         <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
         <div class="carousel-inner">
-					{reviews.map((review) => (
+					{reviews.map((review: unkown) => (
                   <div class="carousel-item">
                       <a href={review.author_url} target="_blank">
                           <h3>{review.author_name}</h3>
@@ -89,16 +89,7 @@ function renderStars(rating: number) {
 		document.querySelector('.carousel-inner').style.transform = `translateX(${offset}%)`;
 	}
 
-	function nextSlide() {
-		showSlide(currentIndex + 1);
-	}
-
-	function prevSlide() {
-		showSlide(currentIndex - 1);
-	}
-
 	function autoScroll() {
-		nextSlide();
 		setTimeout(autoScroll, 30000);
 	}
 
