--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -27,15 +27,18 @@ function renderStars(rating: number) {
     <div class="carousel">
         <button class="carousel-control prev" onclick="prevSlide()">&#10094;</button>
         <div class="carousel-inner">
-					{reviews.map((review: unkown) => (
-                  <div class="carousel-item">
-                      <a href={review.author_url} target="_blank">
-                          <h3>{review.author_name}</h3>
-                      </a>
-                      <p>{renderStars(review.rating)} {review.relative_time_description}</p>
-                      <p>{review.text}</p>
-                  </div>
-					))}
+
+					{ // @ts-ignore
+
+						reviews.map((review) => (
+                    <div class="carousel-item">
+                        <a href={review.author_url} target="_blank">
+                            <h3>{review.author_name}</h3>
+                        </a>
+                        <p>{renderStars(review.rating)} {review.relative_time_description}</p>
+                        <p>{review.text}</p>
+                    </div>
+						))}
         </div>
         <button class="carousel-control next" onclick="nextSlide()">&#10095;</button>
     </div>
