Add reviews basics

--- a/src/layouts/multi.astro
+++ b/src/layouts/multi.astro
@@ -55,6 +55,7 @@ const navigationFooter = navigation.filter((nav) =>
 
 <style lang="scss">
   main {
+    width: 100%;
     position: absolute;
     right: 0;
   }
