Refactor Nav Reviews Index

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,79 +1,221 @@
 ---
-import type {INavigation} from "../types/navigation";
-import {Icon} from "astro-icon/components";
+import type { INavigation } from '../types/navigation';
+import { Icon } from 'astro-icon/components';
 
 interface Props {
 	navigation: INavigation[];
 	navigationPostion: string;
 }
 
-const {navigation} = Astro.props;
-const {navigationPostion} = Astro.props;
+const { navigation } = Astro.props;
+const { navigationPostion } = Astro.props;
 ---
 
-<nav class="navbar">
-    <div class="navbar-display">
-        <ul>
-					{
-						navigation.map((item) => {
-							return (
-                      <li>
-                          <a
-                                  href={
-																		navigationPostion === "header" ? "#" + item.title : item.title
-																	}
-                                  data-href={item.title}
-                                  aria-current="page"
-                          >
-														{item.title}
-                          </a>
-                      </li>
+<nav class='navbar'>
+	<div class='navbar-display'>
+		<ul>
+			{
+				navigation.map((item) => {
+					return (
+						<li>
+							<a
+								href={
+									navigationPostion === 'header' ? '#' + item.title : item.title
+								}
+								data-href={item.title}
+								aria-current='page'
+							>
+								{item.title}
+							</a>
+						</li>
+					);
+				})
+			}
+		</ul>
+	</div>
+	<div class='navbar-mobile'>
+		<button>
+			<Icon name='line-md:close-to-menu-transition' />
+		</button>
 
-							);
-						})
-					}
-        </ul>
-    </div>
-    <div class="navbar-mobile">
-        <button>
-            <Icon name="line-md:close-to-menu-transition"/>
-        </button>
-
-        <div>
-            <ul>
-							{
-								navigation.map((item) => {
-									return (
-                          <li>
-                              <a
-                                      href={
-																				navigationPostion === "header" ? "#" + item.title : item.title
-																			}
-                                      data-href={item.title}
-                                      aria-current="page"
-                              >
-																{item.title}
-                              </a>
-                          </li>
-
-									);
-								})
-							}
-            </ul>
-        </div>
-    </div>
+		<div>
+			<ul>
+				{
+					navigation.map((item) => {
+						return (
+							<li>
+								<a
+									href={
+										navigationPostion === 'header'
+											? '#' + item.title
+											: item.title
+									}
+									data-href={item.title}
+									aria-current='page'
+								>
+									{item.title}
+								</a>
+							</li>
+						);
+					})
+				}
+			</ul>
+		</div>
+	</div>
 </nav>
 
-<script>
-	const navbarMobile = document.querySelector(".navbar-mobile");
+<style lang='scss'>
+	@import './../styles/GlobalStyling';
 
-	navbarMobile?.addEventListener("click", () => {
-		navbarMobile?.classList.toggle("active");
+	nav {
+		align-items: center;
+
+		ul {
+			display: flex;
+			list-style: none;
+			margin: unset;
+			padding: unset;
+
+			li {
+				margin-right: $spacing-l;
+				font-weight: 350;
+
+				&:last-child {
+					margin-right: unset;
+				}
+
+				a {
+					text-decoration: none;
+					text-transform: uppercase;
+					font-family:
+						Source Code Pro Variable,
+						sans-serif;
+					font-size: 1.1rem;
+					cursor: pointer;
+				}
+			}
+		}
+	}
+
+	.navbar {
+		.navbar-mobile {
+			cursor: pointer;
+
+			@include min-width('l') {
+				display: none;
+			}
+
+			button {
+				position: absolute;
+				top: 1.25rem;
+				right: 1.25rem;
+				background: none;
+				border: none;
+				color: $color-white;
+				font-size: 1.5rem;
+				cursor: pointer;
+				padding: 0;
+				z-index: 1000;
+
+				&:hover {
+					color: $color-secondary;
+				}
+			}
+
+			div {
+				display: none;
+			}
+
+			&.active {
+				div {
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					animation: slideIn ease-in;
+					animation-duration: 0.5s;
+
+					ul {
+						display: flex;
+						flex-direction: column;
+						justify-content: center;
+						gap: $spacing-xl;
+						width: 100vw;
+						height: 100vh;
+						padding: $spacing-4xl $spacing-xxl;
+						background-color: $color-primary;
+
+						li {
+							a {
+								font-size: 1.75rem;
+								color: $color-white;
+
+								&:hover {
+									color: $color-secondary;
+								}
+							}
+						}
+					}
+				}
+			}
+
+			&.inactive {
+				div {
+					animation: slideIn ease-out;
+					animation-duration: 0.5s;
+				}
+			}
+		}
+
+		.navbar-display {
+			display: none;
+
+			@include min-width('l') {
+				display: block;
+			}
+
+			a {
+				opacity: 0.5;
+				padding: $spacing-s;
+				border: 1px solid transparent;
+				transition: border 0.5s;
+
+				&.active {
+					opacity: 1;
+				}
+
+				&:hover {
+					opacity: 0.75;
+					color: $color-secondary;
+				}
+
+				&:focus {
+					color: $color-secondary;
+				}
+			}
+		}
+
+		@keyframes slideIn {
+			from {
+				transform: translateX(100vw);
+			}
+
+			to {
+				transform: translateX(0vw);
+			}
+		}
+	}
+</style>
+
+<script>
+	const navbarMobile = document.querySelector('.navbar-mobile');
+
+	navbarMobile?.addEventListener('click', () => {
+		navbarMobile?.classList.toggle('active');
 	});
 
-
 	let scrollTimeout: ReturnType<typeof setTimeout> | null = null;
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 		initNavigation();
 		initIntersectionObserver();
 	});
@@ -84,12 +226,13 @@ const {navigationPostion} = Astro.props;
 	}
 
 	function updateActiveLink(): void {
-		const navigationLinks = document.querySelectorAll<HTMLAnchorElement>('a[data-href]');
+		const navigationLinks =
+			document.querySelectorAll<HTMLAnchorElement>('a[data-href]');
 		const currentUrl = window.location.hash.substring(1);
 
 		navigationLinks.forEach((link) => {
 			const linkHref = link?.getAttribute('data-href')?.substring(1);
-			link.classList.toggle("active", linkHref === currentUrl);
+			link.classList.toggle('active', linkHref === currentUrl);
 		});
 	}
 
@@ -97,11 +240,11 @@ const {navigationPostion} = Astro.props;
 		const observerOptions: IntersectionObserverInit = {
 			root: null,
 			rootMargin: '0px',
-			threshold: 0.5
+			threshold: 0.5,
 		};
 
 		const observerCallback: IntersectionObserverCallback = (entries) => {
-			entries.forEach(entry => {
+			entries.forEach((entry) => {
 				if (entry.isIntersecting) {
 					const sectionId = entry.target.id;
 					handleScrollStop(sectionId);
@@ -109,14 +252,19 @@ const {navigationPostion} = Astro.props;
 			});
 		};
 
-		const observer = new IntersectionObserver(observerCallback, observerOptions);
-		document.querySelectorAll<HTMLElement>('section').forEach(section => {
+		const observer = new IntersectionObserver(
+			observerCallback,
+			observerOptions
+		);
+		document.querySelectorAll<HTMLElement>('section').forEach((section) => {
 			observer.observe(section);
 		});
 	}
 
 	function handleScrollStop(sectionId: string): void {
-		const activeLink = document.querySelector<HTMLAnchorElement>(`a[data-href='#${sectionId}']`);
+		const activeLink = document.querySelector<HTMLAnchorElement>(
+			`a[data-href='#${sectionId}']`
+		);
 
 		if (activeLink) {
 			if (scrollTimeout !== null) {
@@ -124,10 +272,12 @@ const {navigationPostion} = Astro.props;
 			}
 
 			scrollTimeout = setTimeout(() => {
-				document.querySelectorAll<HTMLAnchorElement>('a[data-href]').forEach(link => {
-					link.classList.remove('active', 'inactive');
-					link.classList.add('inactive');
-				});
+				document
+					.querySelectorAll<HTMLAnchorElement>('a[data-href]')
+					.forEach((link) => {
+						link.classList.remove('active', 'inactive');
+						link.classList.add('inactive');
+					});
 
 				activeLink.classList.remove('inactive');
 				activeLink.classList.add('active');
@@ -135,4 +285,3 @@ const {navigationPostion} = Astro.props;
 		}
 	}
 </script>
-
