--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -1,8 +1,8 @@
 ---
 const reviews = await fetchReviews();
 async function fetchReviews() {
-	const API_KEY = "AIzaSyAlDmSirID3ctmTbZn5-rJG6Z-ofXZCmws";
-	const PLACE_ID = "ChIJ_erOoVuif6kRZSACbgSg1Ss";
+	const API_KEY = 'AIzaSyAlDmSirID3ctmTbZn5-rJG6Z-ofXZCmws';
+	const PLACE_ID = 'ChIJ_erOoVuif6kRZSACbgSg1Ss';
 	const url = `https://maps.googleapis.com/maps/api/place/details/json?place_id=${PLACE_ID}&fields=reviews&language=de&key=${API_KEY}`;
 
 	const response = await fetch(url);
@@ -22,55 +22,55 @@ function renderStars(rating: number) {
 	return '★'.repeat(fullStars) + '☆'.repeat(emptyStars);
 }
 ---
-<div class="reviews">
-    <h2>Google Reviews</h2>
-    <div class="carousel">
-        <div class="carousel-inner">
 
-					{ // @ts-ignore
-
-						reviews.map((review) => (
-                    <div class="carousel-item">
-                        <a href={review.author_url} target="_blank">
-                            <h3>{review.author_name}</h3>
-                        </a>
-                        <p>{renderStars(review.rating)} {review.relative_time_description}</p>
-                        <p>{review.text}</p>
-                    </div>
-						))}
-        </div>
-    </div>
+<div class='reviews'>
+	<h2>Google Reviews</h2>
+	<div class='carousel'>
+		<div class='carousel-inner'>
+			{
+				// @ts-ignore
+				reviews.map((review) => (
+					<div class='carousel-item'>
+						<a href={review.author_url} target='_blank'>
+							<h3>{review.author_name}</h3>
+						</a>
+						<p>
+							{renderStars(review.rating)} {review.relative_time_description}
+						</p>
+						<p>{review.text}</p>
+					</div>
+				))
+			}
+		</div>
+	</div>
 </div>
 
 <style>
-    .reviews {
-        display: flex;
-        flex-direction: column;
-        gap: 8rem;
-        padding: 1rem;
+	.reviews {
+		display: flex;
+		flex-direction: column;
+		gap: 8rem;
 
-        .carousel {
-            width: 100%;
-            margin: auto;
-            overflow-y: scroll;
+		.carousel {
+			width: 100%;
+			margin: auto;
+			overflow-y: scroll;
 
-            .carousel-inner {
-                display: flex;
-                transition: transform 0.5s ease;
+			.carousel-inner {
+				display: flex;
+				transition: transform 0.5s ease;
 
-                .carousel-item {
-                    min-width: 100%;
-                    box-sizing: border-box;
-                    margin-right: 2rem;
-                    padding: 5vw;
-
-                    &:last-child {
-                        padding-right: unset;
-                    }
-                }
-            }
-        }
-    }
+				.carousel-item {
+					min-width: 100%;
+					box-sizing: border-box;
+					margin-right: 2rem;
+					&:last-child {
+						padding-right: unset;
+					}
+				}
+			}
+		}
+	}
 </style>
 
 <script>
@@ -87,11 +87,12 @@ function renderStars(rating: number) {
 		}
 		const offset = -currentIndex * 100;
 		//@ts-ignore
-		document.querySelector('.carousel-inner').style.transform = `translateX(${offset}%)`;
+		document.querySelector('.carousel-inner').style.transform =
+			`translateX(${offset}%)`;
 	}
 
 	function autoScroll() {
-		setTimeout(autoScroll, 30000);
+		setTimeout(autoScroll, 4000);
 	}
 
 	document.addEventListener('DOMContentLoaded', () => {
